--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.jiguang</groupId>
         <artifactId>anti-deception-parent</artifactId>
-        <version>3.32.0-SNAPSHOT</version>
+        <version>3.32.0</version>
         <relativePath>../anti-deception-parent/pom.xml</relativePath>
     </parent>
 
